--- a/static/sass/pages/base.sass
+++ b/static/sass/pages/base.sass
@@ -35,8 +35,8 @@ a:hover
   .index-hero,
   .about-hero
     display: block !important
-    .hero-title-container
-      padding-top: 7em
+  .hero-title-container
+    padding: 7em 1em !important
 
 // MS EDGE 13/14
 @supports (-ms-ime-align: auto)
